--- a/html/Dockerfile
+++ b/html/Dockerfile
@@ -1,2 +1,4 @@
-FROM nginx
-COPY . /usr/share/nginx/html
+FROM centos:centos7
+RUN yum install httpd -y
+COPY /root/staticsite-docker/html/* /var/www/html/
+CMD ["/usr/sbin/httpd", "-D", "FOREGROUND"]
